--- a/developers-zone/package.json
+++ b/developers-zone/package.json
@@ -20,7 +20,8 @@
     "react-native-elements": "^3.4.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "react-native-dotenv": "^3.4.8"
   },
   "private": true
 }
